Chỉnh sửa thông tin phần Admin
Chỉnh sửa thông tin phần Admin

--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
@@ -82,7 +82,7 @@ else
             </table>
             <a class="btn btn-primary" href="@Url.Action("AddCat","ManageRoom")" title="Thêm mới loại phòng">
                 <i class="fa fa-plus"></i>
-                &nbsp;Thêm mới danh mục phòng
+                &nbsp;Thêm mới loại phòng
             </a>
         </div>
      </div>
