--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateCat.cshtml
@@ -8,7 +8,7 @@
 }
 
 @section ContentHeaderManageRoom{
-    Cập nhật thông tin dannh mục phòng
+    Cập nhật thông tin loại phòng
 }
 
 @section style{
@@ -16,13 +16,18 @@
     <link href="~/Content/css/jquery.bootstrap-touchspin.min.css" rel="stylesheet" />
     <link href="~/Content/css/summernote.css" rel="stylesheet" />
     <style type="text/css">
+        .error {
+            color: red;
+        }
     </style>
+
 }
 
 @section script{
     <script src="~/Content/js/bootstrap-select.min.js"></script>
     <script src="~/Content/js/jquery.bootstrap-touchspin.min.js"></script>
     <script src="~/Content/js/summernote.min.js"></script>
+<script src="~/Content/js/jquery.validate.min.js"></script>
     <script type="text/javascript">
         $('.selectpicker').selectpicker({
             //style: 'btn-info',
@@ -35,6 +40,16 @@
             stepinterval: 50,
             maxboostedstep: 10000000,
             prefix: 'VNĐ'
+        });
+        $("#frmUpdate").validate({
+            rules: {
+                CatNameInfo: "required",
+                CatTypeInfo: "required",
+            },
+            messages: {
+                CatNameInfo: "Cần nhập tên loại phòng",
+                CatTypeInfo: "Cần nhập loại phòng",
+            }
         });
     </script>
 
@@ -51,7 +66,7 @@
             //<p class="error">@ViewBag.ErrorMsg</p>
             //<p class="alert alert-warning" role="alert">@ViewBag.ErrorMsg</p>
         }
-        @using (Html.BeginForm("AddCat", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("UpdateInfoCat", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmUpdate", enctype = "multipart/form-data" }))
         {
             <div class="form-group">
                 @Html.LabelFor(m => m.CatNameInfo, "Tên loại phòng:", new { @class = "col-sm-2 control-label" })
@@ -66,7 +81,8 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
-                    <input name="PriceInfo" type="text" class="form-control" placeholder="Đơn giá">
+                    @*<input name="PriceInfo" type="text" class="form-control" placeholder="Đơn giá">*@
+                    @Html.TextBoxFor(m => m.PriceInfo, new { @class = "form-control", type = "text" })
                 </div>
 
                 @Html.LabelFor(m => m.NoteInfo, "Ghi chú:", new { @class = "col-sm-2 control-label" })
