Chỉnh sửa thông tin phần Admin
Chỉnh sửa thông tin phần Admin

--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/IndexManageRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/IndexManageRoom.cshtml
@@ -5,8 +5,8 @@
 }
 
 @section ContentHeaderManageRoom{
-    IndexManageRoom
+    Trang chủ cho Admin
 }
 
-<h2>IndexManageRoom</h2>
+<h2>Trang chủ cho Admin</h2>
 
