--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
@@ -69,8 +69,8 @@ else
                             <td class="dl-horizontal">@p.Note</td>
                             <td>
                                 <a name="aDelete" class="btn btn-danger btn-xs" href="javascript:void;" title="Xóa" data-id="@p.CatID">
-                                    <i class="fa fa-close"></i>
-                                    @*<i class="fas fa-times"></i>*@
+                                    @*<i class="fas fa-window-close"></i>*@
+                                    <i class="fas fa-times"></i>
                                 </a>
                                 <a name="aUpdate" class="btn btn-success btn-xs" href="javascript:void;" title="Cập nhật" data-id="@p.CatID">
                                     <i class="fa fa-check"></i>
@@ -87,3 +87,5 @@ else
         </div>
      </div>
                     }
+
+<script defer src="~/Content/js/fontawesome-all.js"></script>
