--- a/MVCQLKS/MVCQLKS/Views/Shared/_LayoutManageRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_LayoutManageRoom.cshtml
@@ -57,44 +57,21 @@
                     <ul class="nav navbar-nav">
                         <li><a href="@Url.Action("QuanLyRoom", "ManageRoom")">Quản lý phòng<span class="sr-only">(current)</span></a></li>
                         <li><a href="@Url.Action("QuanLyCat", "ManageRoom")">Quản lý danh mục phòng</a></li>
-                        <li><a href="#">Quản lý khách hàng</a></li>
-                        @*<li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li>*@
+                        <li><a href="#">Quản lý khách hàng</a></li>                       
                     </ul>
-                    @*<form class="navbar-form navbar-left">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search">
-                            </div>
-                            <button type="submit" class="btn btn-default">Submit</button>
-                        </form>*@
+
                     <ul class="nav navbar-nav navbar-right">
-                        @if (Html.IsLogged() == false)
-                        {
-                            <li><a href="@Url.Action("Login","Account")">Đăng nhập Admin</a></li>
-                            <li><a href="@Url.Action("Register","Account")">Đăng ký</a></li>
-                        }
-                        else
-                        {
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Html.GetUserName() <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="@Url.Action("Profile", "Account")"><i class="fa fa-user" aria-hidden="true"></i> Thông tin cá nhân</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a id="logoutLink" href="javascript:void"><i class="fa fa-sign-out" aria-hidden="true"></i> Thoát</a></li>
-                                </ul>
-                            </li>
-                        }
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Html.GetUserName() <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="@Url.Action("Profile", "Account")"><i class="fa fa-user" aria-hidden="true"></i> Thông tin cá nhân</a></li>
+                                <li><a href="@Url.Action("IndexRoomAdmin", "Home", new { permiss = 1 })"></i><i class="fas fa-edit"></i> Trang hỗ trợ đặt phòng</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a id="logoutLink" href="javascript:void"><i class="fas fa-sign-out-alt"></i> Thoát</a></li>
+                            </ul>
+                        </li>
                     </ul>
+
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
@@ -117,6 +94,7 @@
     </div>
     <script src="~/Content/js/jquery.min.js"></script>
     <script src="~/Content/js/bootstrap.min.js"></script>
+    @*<script defer src="~/Content/js/fontawesome-all.js"></script>*@
     <script type="text/javascript">
         $('#logoutLink').on('click', function () {
             $('#frmLogout').submit();
