--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
@@ -7,19 +7,20 @@
 }
 
 @section script{
-    <script type="text/javascript">
+<script type="text/javascript">
         $('a[name ="aDelete"]').on('click', function () {
             var pId = ($(this).data('id'));
             $('#pId').val(pId);
             $('#frmDelete').submit();
         });
+
         $('a[name ="aUpdate"]').on('click', function () {
             var pId = ($(this).data('id'));
             //alert(pId);
             $('#pIdUpdate').val(pId);
             $('#frmUpdate').submit();
         });
-    </script>
+</script>
 }
 
 @section ContentHeaderManageRoom{
@@ -69,7 +70,7 @@ else
                             <td class="dl-horizontal">@p.Note</td>
                             <td>
                                 <a name="aDelete" class="btn btn-danger btn-xs" href="javascript:void;" title="Xóa" data-id="@p.CatID">
-                                    @*<i class="fas fa-window-close"></i>*@
+                                    @*<i class="fa fa-close"></i>*@
                                     <i class="fas fa-times"></i>
                                 </a>
                                 <a name="aUpdate" class="btn btn-success btn-xs" href="javascript:void;" title="Cập nhật" data-id="@p.CatID">
