Chình sửa Room + Script bảng Room
Chình sửa Room + Script bảng Room

--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
@@ -24,7 +24,7 @@
 }
 
 @section ContentHeaderManageRoom{
-    Danh sách danh mục phòng
+    Danh mục phòng
 }
 
 @if (Model.Count == 0)
@@ -42,7 +42,7 @@ else
     <div class="row">
         <div class="col-md-12">
             <div class="panel-headding text-center">
-                <h2>Danh sách danh mục phòng</h2>
+                <h2>Danh mục phòng</h2>
             </div>
             <table class="table table-striped table-hover table-condensed">
                 <thead>
