--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
@@ -17,25 +17,46 @@
     <link href="~/Content/css/jquery.bootstrap-touchspin.min.css" rel="stylesheet" />
     <link href="~/Content/css/summernote.css" rel="stylesheet" />
     <style type="text/css">
+        .error {
+            color: red;
+        }
     </style>
+
 }
 
 @section script{
     <script src="~/Content/js/bootstrap-select.min.js"></script>
     <script src="~/Content/js/jquery.bootstrap-touchspin.min.js"></script>
     <script src="~/Content/js/summernote.min.js"></script>
+    <script src="~/Content/js/jquery.validate.min.js"></script>
     <script type="text/javascript">
         $('.selectpicker').selectpicker({
             //style: 'btn-info',
             //size: 4
         });
-        $("input[name='PriceInfo']").TouchSpin({
-            //initval: 500,
-            min: 500,
+        $("input[name='MaximumCusInfo']").TouchSpin({
+            initval: 3,
+            min: 1,
             max: 1000000000,
             stepinterval: 50,
             maxboostedstep: 10000000,
-            prefix: 'VNĐ'
+            prefix: 'người'
+        });
+        //$("input[name='quantity']").TouchSpin({
+        //    //initval: 3,
+        //    min: 3,
+        //    max: 1000000000,
+        //    stepinterval: 50,
+        //    maxboostedstep: 10000000,
+        //    prefix: 'người'
+        //});
+        $("#frmAdd").validate({
+            rules: {
+                RoomNameInfo: "required"
+            },
+            messages: {
+                RoomNameInfo: "Cần nhập tên phòng"
+            }
         });
     </script>
 
@@ -86,8 +107,14 @@
                         Value = "0"
                     },
                 }, new { @class = "form-control selectpicker" })
-
                 </div>
+
+
+                @Html.LabelFor(m => m.MaximumCusInfo, "Số khách tối đa:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    <input name="MaximumCusInfo" type="text" class="form-control" placeholder="Số khách tối đa">
+                </div>
+
             </div>
 
             <div class="form-group">
