--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
@@ -60,6 +60,7 @@ else
                         <th>Loại phòng</th>
                         <th>Giá</th>
                         <th>Tình trạng</th>
+                        <th>Số khách tối đa</th>
                         <th>&nbsp;</th>
                     </tr>
                 </thead>
@@ -85,6 +86,7 @@ else
                                     @:Còn trống
                                 }
                             </td>
+                            <td>@p.MaximumCus</td>
                             <td>
                                 <a name="aDelete" class="btn btn-danger btn-xs" href="javascript:void;" title="Xóa" data-id="@p.RoomID">
                                     @*<i class="fa fa-close"></i>*@
