Đang chỉnh sửa Room + Sửa Script Room
Đang chỉnh sửa Room + Sửa Script Room

--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
@@ -58,7 +58,7 @@ else
                         <th>STT</th>
                         <th>Phòng</th>
                         <th>Loại phòng</th>
-                        <th>Giá</th>
+                        <th>Đơn giá</th>
                         <th>Tình trạng</th>
                         <th>Số khách tối đa</th>
                         <th>&nbsp;</th>
@@ -74,7 +74,7 @@ else
                         <tr>
                             <td>@stt</td>
                             <td>@p.RoomName</td>
-                            <td>@Html.GetCatName(@p.CatID)</td>
+                            <td>@p.RoomType</td>
                             <td>@string.Format("{0:N0} đ", @p.Price)</td>
                             <td>
                                 @if (@p.Status > 0)
