--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -102,10 +102,10 @@
         <form id="frmLogout" method="post" action="@Url.Action("Logout", "Account")"></form>
         <div class="row">
             <div class="col-md-3">
-                <div class="panel panel-primary">
+                @*<div class="panel panel-primary">
                     <div class="panel-heading">Danh mục phòng</div>
                     @Html.Action("GetList", "Category")
-                </div>
+                </div>*@
                 <div class="panel panel-primary">
                     <div class="panel-heading">Quản lý</div>
                     <a href="@Url.Action("QuanLyCatChoNV", "Employ")" class="list-group-item">Danh mục phòng</a>
