--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
@@ -34,6 +34,14 @@
             //style: 'btn-info',
             //size: 4
         });
+        $("input[name='PriceInfo']").TouchSpin({
+            initval: 500,
+            min: 500,
+            max: 1000000000,
+            stepinterval: 50,
+            maxboostedstep: 10000000,
+            prefix: 'VNĐ'
+        });
         $("input[name='MaximumCusInfo']").TouchSpin({
             initval: 3,
             min: 1,
@@ -80,11 +88,36 @@
                 <div class="col-sm-4">
                     @Html.TextBoxFor(m => m.RoomNameInfo, new { @class = "form-control", placeholder = "Tên phòng" })
                 </div>
-                @Html.LabelFor(m => m.CatIDInfo, "Loại phòng:", new { @class = "col-sm-2 control-label" })
+                @Html.LabelFor(m => m.RoomTypeInfo, "Loại phòng:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
-                    @Html.DropDownListFor(m => m.CatIDInfo, Html.GetSLICat(), new { @class = "form-control selectpicker", placeholder = "danh mục" })
+                    @Html.DropDownListFor(m => m.StatusInfo, new List<SelectListItem>() {
+                    new SelectListItem() {
+                        Text = "A",
+                        Value = "1"
+                    },
+                    new SelectListItem() {
+                        Text = "B",
+                        Value = "2"
+                    },
+                    new SelectListItem() {
+                        Text = "C",
+                        Value = "3"
+                    },
+                }, new { @class = "form-control selectpicker" })
                 </div>
             </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    <input name="PriceInfo" type="text" class="form-control" placeholder="Đơn giá">
+                </div>
+                @Html.LabelFor(m => m.NoteInfo, "Ghi chú:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    @Html.TextBoxFor(m => m.NoteInfo, new { @class = "form-control", placeholder = "Ghi chú" })
+                </div>
+            </div>
+
             <div class="form-group">
                 @*@Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
