Chỉnh sửa Room của Admin và hiển thị Room
Chỉnh sửa Room của Admin và hiển thị Room

--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
@@ -66,6 +66,9 @@
                 RoomNameInfo: "Cần nhập tên phòng"
             }
         });
+        $('a[name ="aAdd"]').on('click', function () {
+            $("#roomtype option:selected").text();
+        });
     </script>
 
 }
@@ -90,20 +93,28 @@
                 </div>
                 @Html.LabelFor(m => m.RoomTypeInfo, "Loại phòng:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
-                    @Html.DropDownListFor(m => m.StatusInfo, new List<SelectListItem>() {
+                    @*@Html.DropDownListFor(m => m.StatusInfo, new List<SelectListItem>() {
                     new SelectListItem() {
-                        Text = "A",
+                        Text = "1",
                         Value = "1"
                     },
                     new SelectListItem() {
-                        Text = "B",
+                        Text = "2",
                         Value = "2"
                     },
                     new SelectListItem() {
-                        Text = "C",
+                        Text = "3",
                         Value = "3"
                     },
-                }, new { @class = "form-control selectpicker" })
+                }, new { @class = "form-control selectpicker" })*@
+
+                    @*<select class="form-control selectpicker" id="roomtype">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                    </select>*@
+
+                    @Html.DropDownListFor(m => m.RoomTypeInfo, new SelectList(Enum.GetValues(typeof(ValueRoomType))), new { @class = "form-control selectpicker" })
                 </div>
             </div>
 
@@ -152,7 +163,7 @@
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-primary">
+                    <button type="submit" class="btn btn-primary" name="aAdd">
                         <i class="fa fa-plus"></i>
                         &nbsp;Thêm
                     </button>
