--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/IndexManageRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/IndexManageRoom.cshtml
@@ -4,6 +4,13 @@
     Layout = "~/Views/Shared/_LayoutManageRoom.cshtml";
 }
 
+@section script{
+    <script defer src="~/Content/js/fontawesome-all.js"></script>
+    <script type="text/javascript">
+
+    </script>
+}
+
 @section ContentHeaderManageRoom{
     Trang chủ cho Admin
 }
