--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
@@ -24,7 +24,7 @@
 
         $('a[name ="aUpdate"]').on('click', function () {
             var pId = ($(this).data('id'));
-            //alert(pId);
+            ////alert(pId);
             $('#pIdUpdate').val(pId);
             $('#frmUpdate').submit();
         });
@@ -80,7 +80,7 @@ else
                                 @if (@p.Status > 0)
                                     {
                                     @:Đã cho thuê
-                                                                                                                                                                }
+                                                                                                                                                                                         }
                                     else
                                     {
                                     @:Còn trống
