--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateRoom.cshtml
@@ -86,18 +86,30 @@
                 <div class="col-sm-4">
                     @Html.TextBoxFor(m => m.RoomNameInfo, new { @class = "form-control", placeholder = "Tên phòng" })
                 </div>
-                @Html.LabelFor(m => m.CatIDInfo, "Loại phòng:", new { @class = "col-sm-2 control-label" })
+                @Html.LabelFor(m => m.RoomTypeInfo, "Loại phòng:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
-                    @Html.DropDownListFor(m => m.CatIDInfo, Html.GetSLICat(), new { @class = "form-control selectpicker", placeholder = "danh mục" })
+                    @Html.DropDownListFor(m => m.RoomTypeInfo, new SelectList(Enum.GetValues(typeof(ValueRoomType))), new { @class = "form-control selectpicker" })
                 </div>
             </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    @*<input name="PriceInfo" type="text" class="form-control" placeholder="Đơn giá">*@
+                    @Html.TextBoxFor(m => m.PriceInfo, new { @class = "form-control", type = "text" })
+                </div>
+
+                @Html.LabelFor(m => m.NoteInfo, "Ghi chú:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    @Html.TextBoxFor(m => m.NoteInfo, new { @class = "form-control", placeholder = "Ghi chú" })
+                </div>
+            </div>
+
             <div class="form-group">
                 @*@Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
                     @Html.TextBoxFor(m => m.PriceInfo, new { @class = "form-control", type = "text", disabled = "disabled" } )
                 </div>*@
-
-
 
 
                 @Html.LabelFor(m => m.StatusInfo, "Tình trạng:", new { @class = "col-sm-2 control-label" })
@@ -117,7 +129,7 @@
                 </div>
                 @Html.LabelFor(m => m.MaximumCusInfo, "Số khách tối đa:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
-                    <input name="MaximumCusInfo" type="text" class="form-control" placeholder="Số khách tối đa">
+                    @Html.TextBoxFor(m => m.MaximumCusInfo, new { @class = "form-control", type = "text" })
                 </div>
 
             </div>
