--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -108,7 +108,7 @@
                 </div>*@
                 <div class="panel panel-primary">
                     <div class="panel-heading">Quản lý</div>
-                    <a href="@Url.Action("QuanLyCatChoNV", "Employ")" class="list-group-item">Danh mục phòng</a>
+                    @*<a href="@Url.Action("QuanLyCatChoNV", "Employ")" class="list-group-item">Danh mục phòng</a>*@
                     <a href="@Url.Action("QuanLyRoomChoNV", "Employ")" class="list-group-item">Danh sách phòng</a>
                 </div>
             </div>
