--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
@@ -9,7 +9,17 @@
 
 @section style{
     <style type="text/css">
-
+        #CanhPhai {
+            text-align: right;
+        }
+        #CanhGiua {
+            text-align: center;
+            /*width: 90px;*/
+        }        
+        #CanhGiuaLoai {
+            text-align: center;
+            width: 90px;
+        }
     </style>
 }
 
@@ -55,12 +65,13 @@ else
             <table class="table table-striped table-hover table-condensed">
                 <thead>
                     <tr>
-                        <th>STT</th>
-                        <th>Phòng</th>
-                        <th>Loại phòng</th>
-                        <th>Đơn giá</th>
-                        <th>Tình trạng</th>
-                        <th>Số khách tối đa</th>
+                        <th id="CanhGiua">STT</th>
+                        <th id="CanhPhai">Phòng</th>
+                        <th id="CanhPhaiLoai">Loại phòng</th>
+                        <th id="CanhPhai">Đơn giá</th>
+                        <th id="CanhPhai">Tình trạng</th>
+                        <th id="CanhGiua">Số khách tối đa</th>
+                        <th id="CanhGiua">Ghi chú</th>
                         <th>&nbsp;</th>
                     </tr>
                 </thead>
@@ -72,11 +83,11 @@ else
                         {
                             stt++;
                         <tr>
-                            <td>@stt</td>
-                            <td>@p.RoomName</td>
-                            <td>@p.RoomType</td>
-                            <td>@string.Format("{0:N0} đ", @p.Price)</td>
-                            <td>
+                            <td id="CanhGiua">@stt</td>
+                            <td id="CanhPhai">@p.RoomName</td>
+                            <td id="CanhGiuaLoai">@p.RoomType</td>
+                            <td id="CanhPhai">@string.Format("{0:N0} đ", @p.Price)</td>
+                            <td id="CanhPhai">
                                 @if (@p.Status > 0)
                                     {
                                     @:Đã cho thuê
@@ -86,7 +97,8 @@ else
                                     @:Còn trống
                                 }
                             </td>
-                            <td>@p.MaximumCus</td>
+                            <td id="CanhGiua">@p.MaximumCus</td>
+                            <td id="CanhGiua">@p.Note</td>
                             <td>
                                 <a name="aDelete" class="btn btn-danger btn-xs" href="javascript:void;" title="Xóa" data-id="@p.RoomID">
                                     @*<i class="fa fa-close"></i>*@
