--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -71,11 +71,11 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="navbar-form navbar-left">
+                    <form id="frmSearch" method="post" action="@Url.Action("TimKiem", "Room")" class="navbar-form navbar-left">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
+                            <input id="txtSearch" type="text" name="noidungSearch" class="form-control" placeholder="Nội dung cần tìm">
                         </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
+                        <a name="btnSearch" href="javascript:void" class="btn btn-default" role="button">Tìm kiếm</a>
                     </form>
                     <ul class="nav navbar-nav navbar-right">
                         @if (Html.IsLogged() == false)
@@ -131,6 +131,16 @@
     <script type="text/javascript">
         $('#logoutLink').on('click', function () {
             $('#frmLogout').submit();
+        });
+        $('a[name ="btnSearch"]').on('click', function () {
+            var noidungtim = $.trim($('#txtSearch').val());
+            if (noidungtim == '') {
+                alert('Nhập nội dung bạn muốn tìm!');
+            }
+            else {
+                $('#txtSearch').val();
+                $('#frmSearch').submit();
+            }
         });
     </script>
     @if (IsSectionDefined("script"))
