--- a/MVCQLKS/MVCQLKS/Views/Shared/_LayoutManageRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_LayoutManageRoom.cshtml
@@ -57,6 +57,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="@Url.Action("QuanLyRoom", "ManageRoom")">Quản lý phòng<span class="sr-only">(current)</span></a></li>
                         @*<li><a href="@Url.Action("QuanLyCat", "ManageRoom")">Quản lý loại phòng</a></li>*@
+                        <li><a href="@Url.Action("QuanLyCusType", "ManageRoom")">Quản lý loại khách hàng</a></li>
                         <li><a href="#">Quản lý khách hàng</a></li>                       
                     </ul>
 
