Cập nhật thông tin loại khách hàng
Cập nhật thông tin loại khách hàng

--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
@@ -30,6 +30,15 @@
 @if (Model.Count == 0)
 {
     @:Không có danh mục phòng
+
+    <div class="row">
+        <div class="col-md-12">
+            <a class="btn btn-primary" href="@Url.Action("AddCat","ManageRoom")" title="Thêm mới loại phòng">
+                <i class="fa fa-plus"></i>
+                &nbsp;Thêm mới loại phòng
+            </a>
+        </div>
+    </div>
 }
 else
 {
