Hiển thị danh sách khách hàng + Sửa script bảng Customer
Hiển thị danh sách khách hàng + Sửa script bảng Customer

--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCusType.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCusType.cshtml
@@ -6,6 +6,22 @@
     Layout = "~/Views/Shared/_LayoutManageRoom.cshtml";
 }
 
+@section style{
+    <style type="text/css">
+        #CanhPhai {
+            text-align: right;
+        }
+        #CanhGiua {
+            text-align: center;
+            /*width: 90px;*/
+        }
+        #CanhGiuaXoaCapNhat {
+            text-align: center;
+            width: 90px;
+        }
+    </style>
+}
+
 @section script{
     <script type="text/javascript">
         $('a[name ="aDelete"]').on('click', function () {
@@ -24,42 +40,43 @@
 }
 
 @section ContentHeaderManageRoom{
-    Danh sách loại khách hàng
+    Danh sách loại khách 
 }
 
 @if (Model.Count == 0)
 {
-    @:Không có loại khách hàng
+    @:Không có loại khách 
 
     <div class="row">
         <div class="col-md-12">
-            <a class="btn btn-primary" href="@Url.Action("AddCusType","ManageRoom")" title="Thêm mới loại khách hàng">
+            <a class="btn btn-primary" href="@Url.Action("AddCusType","ManageRoom")" title="Thêm mới loại khách">
                 <i class="fa fa-plus"></i>
-                &nbsp;Thêm mới loại khách hàng
+                &nbsp;Thêm mới loại khách 
             </a>
         </div>
     </div>
 }
 else
 {
-    <form id="frmDelete" method="post" action="@Url.Action("DeleteCusType", "ManageRoom")">
-        <input id="pId" type="hidden" name="id" />
-    </form>
-    <form id="frmUpdate" method="post" action="@Url.Action("UpdateCusType", "ManageRoom")">
-        <input id="pIdUpdate" type="hidden" name="id" />
-    </form>
-        <div class="row">
+    <div class="row">
+        <form id="frmDelete" method="post" action="@Url.Action("DeleteCusType", "ManageRoom")">
+            <input id="pId" type="hidden" name="id" />
+        </form>
+        <form id="frmUpdate" method="post" action="@Url.Action("UpdateCusType", "ManageRoom")">
+            <input id="pIdUpdate" type="hidden" name="id" />
+        </form>
             <div class="col-md-12">
                 <div class="panel-headding text-center">
-                    <h2>Danh sách loại khách hàng</h2>
+                    <h2>Danh sách loại khách</h2>
                 </div>
                 <table class="table table-striped table-hover table-condensed">
                     <thead>
                         <tr>
-                            <th>STT</th>
-                            <th>Loại khách hàng</th>
-                            <th>Hệ số</th>
-                            <th>&nbsp;</th>
+                            <th id="CanhGiua">STT</th>
+                            <th>Tên loại khách</th>
+                            <th id="CanhPhai">Hệ số</th>
+                            <th id="CanhGiuaXoaCapNhat">Xóa</th>
+                            <th id="CanhGiuaXoaCapNhat">Cập nhật</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -70,14 +87,16 @@ else
                         {
                             stt++;
                             <tr>
-                                <td>@stt</td>
+                                <td id="CanhGiua">@stt</td>
                                 <td>@p.CusTypeName</td>
-                                <td>@p.Coefficient</td>
-                                <td>
+                                <td id="CanhPhai">@p.Coefficient</td>
+                                <td id="CanhGiuaXoaCapNhat">
                                     <a name="aDelete" class="btn btn-danger btn-xs" href="javascript:void;" title="Xóa" data-id="@p.CusTypeID">
                                         @*<i class="fa fa-close"></i>*@
                                         <i class="fas fa-times"></i>
                                     </a>
+                                </td>
+                                <td id="CanhGiuaXoaCapNhat">
                                     <a name="aUpdate" class="btn btn-success btn-xs" href="javascript:void;" title="Cập nhật" data-id="@p.CusTypeID">
                                         <i class="fa fa-check"></i>
                                     </a>
@@ -86,9 +105,9 @@ else
                         }
                     </tbody>
                 </table>
-                <a class="btn btn-primary" href="@Url.Action("AddCusType","ManageRoom")" title="Thêm mới loại phòng">
+                <a class="btn btn-primary" href="@Url.Action("AddCusType","ManageRoom")" title="Thêm mới loại khách">
                     <i class="fa fa-plus"></i>
-                    &nbsp;Thêm mới loại khách hàng
+                    &nbsp;Thêm mới loại khách
                 </a>
             </div>
         </div>
