--- a/MVCQLKS/MVCQLKS/Views/Room/Detail.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Room/Detail.cshtml
@@ -12,7 +12,7 @@
     Chi tiết phòng
 }
 
-<div class="roư">
+<div class="row">
     @*<div class="col-sm-12">
             <h3>Phòng @Model.RoomName</h3>
         </div>*@
@@ -35,6 +35,7 @@
                 @:Còn trống
             }
         </p>
+
         <p>
             @*<a href="#" class="btn btn-primary" role="button" disabled="disabled">Thuê phòng</a>*@
             <a href="#" class="btn btn-default" role="button">Trả phòng</a>
