--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/AddCusType.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/AddCusType.cshtml
@@ -7,7 +7,7 @@
 }
 
 @section ContentHeaderManageRoom{
-    Thêm mới loại khách hàng
+    Thêm mới loại khách 
 }
 
 @section style{
@@ -46,7 +46,7 @@
                 CusTypeNameInfo: "required",
             },
             messages: {
-                CusTypeNameInfo: "Cần nhập tên loại khách hàng",
+                CusTypeNameInfo: "Cần nhập tên loại khách",
             }
         });
     </script>
@@ -67,9 +67,9 @@
         @using (Html.BeginForm("AddCusType", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
         {
             <div class="form-group">
-                @Html.LabelFor(m => m.CusTypeNameInfo, "Tên loại khách hàng:", new { @class = "col-sm-2 control-label" })
+                @Html.LabelFor(m => m.CusTypeNameInfo, "Tên loại khách:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
-                    @Html.TextBoxFor(m => m.CusTypeNameInfo, new { @class = "form-control", placeholder = "Tên loại khách hàng" })
+                    @Html.TextBoxFor(m => m.CusTypeNameInfo, new { @class = "form-control", placeholder = "Tên loại khách" })
                 </div>
             </div>
             <div class="form-group">
